c/examples/writing-a-c-compiler-tests/tests/chapter_9/valid/libraries/system_call_client.c
int incr_and_print(int c);

int main(void) {
    incr_and_print(70);
    return 0;
}