c/examples/writing-a-c-compiler-tests/tests/chapter_9/invalid_parse/var_init_in_param_list.c
/* Variable initializers aren't permitted in parameter lists */
int bad_params(int a = 3) {
    return 1;
}

int main(void) {
    return 0;
}